--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,10 @@
         <activity
             android:name=".view.SelectStreetActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".view.HistoryActivity"></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.HistoryActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
